chore: add reflection, service loader to graalvm native images